--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
-1) Make simple library browser in UI
+DONE Make simple library browser in UI
+ DONE Make listview UI
+ DONE Hook up top-level library to UI
+
 2) Import music scanning code (can do brute-force whole-library scan for now)
 3) Serve up scanned bands using library API, verify using UI
+- Add "breadcrumbs" as user navigates down into bands, albums, etc.
 ---
 4) Add database
 5) Augment scanning code to handle "last updated" file info, so we can update DB as SD card changes
