--- a/TODO
+++ b/TODO
@@ -2,11 +2,16 @@ DONE Make simple library browser in UI
  DONE Make listview UI
  DONE Hook up top-level library to UI
 
-2) Import music scanning code (can do brute-force whole-library scan for now)
-3) Serve up scanned bands using library API, verify using UI
-- Add "breadcrumbs" as user navigates down into bands, albums, etc.
+DONE Import music scanning code (can do brute-force whole-library scan for now)
+ DONE Bands
+ DONE Albums, album songs and loose songs
+
+DONE Serve up scanned bands using library API, verify using UI
+ DONE Add "breadcrumbs" as user navigates down into bands, albums, etc.\
+
 ---
 4) Add database
+   Allow "early access" to database before first scan complete?
 5) Augment scanning code to handle "last updated" file info, so we can update DB as SD card changes
 6) Add full-library shuffle playback
 ---
