Small fixes:     Make library UI look a little less terrible     remove some unneeded code     Allow DB to sort results, rather that just doing it by title     Allow navigation from player even before user has manually opened library UI

--- a/TODO
+++ b/TODO
@@ -15,13 +15,14 @@ Cleanup opportunities:
 - Scanner needs to kick off automatically, without user needing to switch to the library UI!
 
 ---
-Better UI startup actions. User shouldn't have to switch to library before autonav works
-
 Keep adding missing features like locking, playback modes, etc.
   - Allow "early access" to database before first scan complete?
   - Better use of external media dirs (e.g. require mcotp to be under a "Music" directory?
 
 How will we communicate non-standard info across app/service boundary, like double-shot weekend, and sequential mode, etc.?
+
+How to deal with sorting multiple releases in the same year?
+How to deal with band names not matching directory names (Anthrax, The Smiths, R.E.M.)?
 
 Better scrolling through long list of bands
 
