Separate UI and backend code, add connector object between them

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
+Check for proper resource/listener disposal, especially in library
 - Maybe restore former song playtime after restart?
+- Investigate library UI slowness
 
 ---
 
